disable 404 logic page

--- a/404.html
+++ b/404.html
@@ -7,9 +7,11 @@
     <title>Talne Kahoot</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      custom 404
+    </div>
     <script>
-      window.location.href = window.location.protocol + '//' + window.location.hostname + '/';
+      // window.location.href = window.location.protocol + '//' + window.location.hostname + '/';
     </script>
   </body>
 </html>
