--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       custom 404
     </div>
     <script>
-      // window.location.href = window.location.protocol + '//' + window.location.hostname + '/';
+      window.location.href = window.location.protocol + '//' + window.location.hostname + '/';
     </script>
   </body>
 </html>
